게임 밸런스 및 UI 개선: 새로운 아이콘 추가, 키보드 입력 처리 수정, 스타일 조정

--- a/src/styles/components/_hpbar.scss
+++ b/src/styles/components/_hpbar.scss
@@ -38,10 +38,10 @@
 .hp-bar-label {
   font-family: v.$font-pixel;
   color: v.$color-text;
-  text-align: right;
+  text-align: left;
 
   @include m.mobile {
-    font-size: m.vw(8);
+    font-size: m.vw(12);
     margin-bottom: m.vw(4);
   }
   @include m.desktop {
