스타일 개선: OrderCard 컴포넌트 코드 정리 및 SCSS 수정

--- a/src/styles/components/_order.scss
+++ b/src/styles/components/_order.scss
@@ -59,13 +59,10 @@
   background-color: v.$color-surface;
   overflow: hidden;
 
-  @include pb.pixel-box(
+  @include pb.pixel-borders(
     $corner-size: 2,
     $border-size: 3px,
-    $background-color: v.$color-surface,
-    $border-color: v.$color-primary,
-    $border-inset: true,
-    $border-inset-sides: "all"
+    $border-color: v.$color-primary
   );
 
   @include m.mobile {
