상대방 상태 업데이트 개선: 점수, 콤보, 정답 제출 수 추가 및 UI 스타일 수정

--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -587,4 +587,34 @@
 
   font-family: v.$font-pixel;
   color: v.$color-text;
+
+  &__name {
+    font-weight: bold;
+    flex-shrink: 0;
+  }
+
+  &__hp {
+    color: v.$color-danger;
+    flex-shrink: 0;
+  }
+
+  &__cleared {
+    color: v.$color-success;
+    flex-shrink: 0;
+  }
+
+  &__score {
+    flex: 1;
+    text-align: right;
+  }
+
+  &__combo {
+    color: v.$color-primary;
+    flex-shrink: 0;
+  }
+
+  &__gameover {
+    color: v.$color-success;
+    flex-shrink: 0;
+  }
 }
