햄버거 재료 6가지로 추가 수정

--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -83,6 +83,12 @@
   &.ingredient-layer--patty {
     margin-bottom: -32%;
   }
+  &.ingredient-layer--onion {
+    margin-bottom: -32%;
+  }
+  &.ingredient-layer--tomato {
+    margin-bottom: -32%;
+  }
 
   img {
     width: 100%;
