스타일 수정: 재료 레이어의 마진 및 패딩 조정, 주문서의 크기 컨테이너 지정

--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -74,12 +74,14 @@
 
   &.ingredient-layer--veggie {
     margin-bottom: -32%;
+    margin-top: -8%;
   }
   &.ingredient-layer--cheese {
     margin-bottom: -36%;
   }
   &.ingredient-layer--sauce {
     margin-bottom: -33%;
+    padding-top: 5%;
   }
   &.ingredient-layer--patty {
     margin-bottom: -32%;
