--- a/src/styles/components/_burger.scss
+++ b/src/styles/components/_burger.scss
@@ -8,7 +8,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   // overflow: hidden;
   height: 100%;
 
@@ -74,7 +74,7 @@
 
   &.ingredient-layer--veggie {
     margin-bottom: -32%;
-    margin-top: -8%;
+    margin-top: -5%;
   }
   &.ingredient-layer--cheese {
     margin-bottom: -36%;
