--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -417,6 +417,7 @@
   .hp-bar-wrap {
     grid-column: 1 / 3;
     grid-row: 2;
+    border-radius: 0;
   }
 
   .ingame__score {
@@ -743,13 +744,13 @@
   @include m.mobile {
     padding: m.vw(6) m.vw(10);
     gap: m.vw(12);
-    font-size: m.vw(8);
+    font-size: m.vw(12);
     margin: m.vw(6) m.vw(12);
   }
   @include m.desktop {
     padding: 6px 10px;
     gap: 12px;
-    font-size: 12px;
+    font-size: 16px;
     margin: 6px 12px;
   }
 
